# health-bot

./: .gitignore  COPD_QA.xlsx  Dockerfile  README.md  SETUP_GUIDE.md  article.txt  bot.py  clear_memory_collection.py  config_template.env  current_versions.txt  docker-compose.yml  draft_on_chat_bot.md  embedding.py  generate_article.py  intent.json  load_article.py  main.py  qa.txt  quick_test.py  requirements.txt  response.py  summary.json  test.py  test2.py  test_script.py  view_memory_collection.py
HealthBot/: __init__.py  agent.py
ProactiveCare/: scheduler.py  tasks.py
alerts/: alert_log.json
poetry_bot_test/: pyproject.toml  requirements.txt
postgres-init/: init.sql
profiles/: Boy.json  test_user.json
sessions/: Boy_summary.json  test_user_summary.json
toolkits/: redis_store.py  tools.py
utils/: db_connectors.py  line_pusher.py
volumes/milvus/rdb_data/: IDENTITY  LOG  LOG.old.1752495809900121  LOG.old.1752496047939873  LOG.old.1752498434921229  LOG.old.1752498622564738
volumes/milvus/rdb_data_meta_kv/: 000009.sst  IDENTITY  LOG  LOG.old.1752495809801574  LOG.old.1752496047864661  LOG.old.1752498434839750  LOG.old.1752498622501599  MANIFEST-000025
volumes/minio/.minio.sys/: format.json
