[project]
name = "poetry-bot-test"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai (>=1.99.9,<2.0.0)",
    "crewai (>=0.159.0,<0.160.0)",
    "pymilvus (>=2.6.0,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "line-bot-sdk (>=3.18.1,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
]

[tool.poetry]
packages = [{ include = "poetry_bot_test", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
